// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-popups/ActionSheetBase should renders correctly Item 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 45,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      Object {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          Object {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-popups/ActionSheetBase should renders correctly Item with  textFont 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderTopLeftRadius": 18,
        "borderTopRightRadius": 18,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      Object {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#FFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 22.5,
            "lineHeight": 28.5,
          },
          Object {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-popups/ActionSheetBase should renders correctly Item with !selected 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomLeftRadius": 18,
        "borderBottomRightRadius": 18,
        "borderTopColor": "#D1D4DB",
        "borderTopWidth": 1.5,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      Object {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#FFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 22.5,
            "lineHeight": 28.5,
          },
          Object {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 16.5,
          "borderWidth": 3,
          "justifyContent": "center",
          "marginRight": 18,
          "width": 33,
        }
      }
      value="title"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-popups/ActionSheetBase should renders correctly Item with disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 45,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      Object {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          Object {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-popups/ActionSheetBase should renders correctly Item with leftIcon 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 45,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      Object {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        Object {
          "paddingRight": 27,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          Object {
            "color": "#5E6678",
            "fontFamily": "Neotis",
            "fontSize": 36,
          }
        }
      >
        
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          Object {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-popups/ActionSheetBase should renders correctly Item with selected  1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 18,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
        "marginHorizontal": 12,
        "minHeight": 75,
        "paddingHorizontal": 30,
      },
      Object {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 24,
            "lineHeight": 30,
          },
          Object {
            "paddingVertical": 22.5,
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "#2B78EE",
          "borderColor": "#2B78EE",
          "borderRadius": 16.5,
          "borderWidth": 3,
          "justifyContent": "center",
          "marginRight": 18,
          "width": 33,
        }
      }
      value="title"
    >
      <View
        style={
          Object {
            "aspectRatio": 1,
            "borderColor": "#FFF",
            "borderRadius": 13.5,
            "borderWidth": 3,
            "width": 27,
          }
        }
      />
    </View>
  </View>
</View>
`;
